--- a/TimeCountDown/TimeCountDown.html
+++ b/TimeCountDown/TimeCountDown.html
@@ -9,6 +9,6 @@
 <input type="number" placeholder="Nhap so muon dem nguoc" id="CountDown">
 <p id="time"></p>
 <button onclick="countdown()">Submit</button>
-<script src="TimeCountDown.js"></script>
+<script src="../TimeCountDown.js"></script>
 </body>
 </html>
